--- a/testlocaleurl/testapp/templates/locale_url.html
+++ b/testlocaleurl/testapp/templates/locale_url.html
@@ -1,4 +1,4 @@
 {% load localeurl_tags %}
- {% locale_url "nl" testapp.views.dummy %} 
- {% locale_url "en-us" testapp.views.dummy 4 %} 
- {% locale_url "fr" testapp.views.dummy test=4 %} 
+ {% locale_url "nl" dummy0 %} 
+ {% locale_url "en-us" dummy1 4 %} 
+ {% locale_url "fr" dummy1 test=4 %} 
