Added PREFIX_DEFAULT_LANGUAGE settings option. Patch by Jonas Christian.

--- a/testlocaleurl/testapp/templates/chlocale.html
+++ b/testlocaleurl/testapp/templates/chlocale.html
@@ -1,4 +1,4 @@
 {% load localeurl_tags %}
- {{ "/admin/"|chlocale:"fr" }} 
+ {{ "/admin/"|chlocale:"nl" }} 
  {{ "/nl/admin/"|chlocale:"en-gb" }} 
  {{ "/en-us/admin/"|chlocale:LANGUAGE_CODE }} 
